<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto">


  <TextView
    android:id="@+id/application_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/unscrambled_label"
    android:textSize="60sp"
    android:textStyle="italic|bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <TextView
    android:id="@+id/difficulty_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/difficulty_screen"
    android:textSize="40sp"
    android:textStyle="bold"
    app:layout_constraintTop_toBottomOf="@id/application_name"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <RadioGroup
    android:id="@+id/difficulty_selector"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

  <RadioButton
    android:id="@+id/easy"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/easy_difficulty"
    android:textSize="25sp"
    android:padding="8dp"/>

  <RadioButton
    android:id="@+id/regular"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/regular_difficulty"
    android:textSize="25sp"
    android:padding="8dp"
    app:layout_constraintTop_toBottomOf="@id/easy"/>

  <RadioButton
    android:id="@+id/hard"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/hard_difficulty"
    android:textSize="25sp"
    android:padding="8dp"
    app:layout_constraintTop_toBottomOf="@id/regular"/>

  <RadioButton
    android:id="@+id/insane"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/insane_difficulty"
    android:textSize="25sp"
    android:padding="8dp"
    app:layout_constraintTop_toBottomOf="@id/hard"/>
  </RadioGroup>

  <Button
    android:id="@+id/previous_screen"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/return_label"
    android:textSize="25sp"
    android:layout_margin="16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"


</androidx.constraintlayout.widget.ConstraintLayout>