<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".controller.ThemeDetailsFragment">




    <ImageButton
      android:id="@+id/save"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/half_dynamic_spacing"
      android:src="@drawable/ic_check"
      android:background="?android:selectableItemBackgroundBorderless"
      android:tint="#ff00A000"
      app:layout_constraintTop_toBottomOf="@id/theme_selector"
      app:layout_constraintStart_toStartOf="@id/theme_selector"
      android:contentDescription="@string/save_label"
      android:tooltipText="@string/save_label"/>

    <ImageButton
      android:id="@+id/cancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/half_dynamic_spacing"
      android:src="@drawable/ic_close"
      android:background="?android:selectableItemBackgroundBorderless"
      android:tint="#ffff0000"
      app:layout_constraintTop_toBottomOf="@id/save"
      app:layout_constraintEnd_toEndOf="parent"
      android:contentDescription="@string/cancel_label"
      android:tooltipText="@string/cancel_label"/>

<!--    TODO Add objects for the required properties of a theme.-->

  <TextView
    android:id="@+id/application_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/unscrambled_label"
    android:textSize="60sp"
    android:textStyle="italic|bold"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
      android:id="@+id/theme_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/theme_screen"
      android:textSize="40sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/application_name"
      app:layout_constraintEnd_toEndOf="parent"/>

<!--  <androidx.constraintlayout.widget.Barrier-->
<!--    android:layout_width=""-->
<!--    android:layout_height=""-->

    <RadioGroup
      android:id="@+id/theme_selector"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent">


      <RadioButton
        android:id="@+id/classic_art"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classic_art_theme"
        android:textSize="25sp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/theme_label"/>
      <RadioButton
        android:id="@+id/fractals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fractals_theme"
        android:textSize="25sp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/classic_art"/>
      <RadioButton
        android:id="@+id/marvel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marvel_theme"
        android:textSize="25sp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/fractals"/>
      <RadioButton
        android:id="@+id/nature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nature_theme"
        android:textSize="25sp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/marvel"/>

    </RadioGroup>








</androidx.constraintlayout.widget.ConstraintLayout>